force-app/main/default/objects/NI_Trust_Outage__c/NI_Trust_Outage__c.object-meta.xml
<CustomObject>
    <description>Outages for the NI Trust Object</description>
    <label>AH Trust Incident</label>
    <nameField>
        <displayFormat>I-{000000}</displayFormat>
        <label>AH Trust Outage Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AH Trust Incidents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>