force-app/main/default/objects/NI_Trust_Outage__c/fields/Amadeus_Investigative_Action__c.field-meta.xml
<CustomField>
    <fullName>Amadeus_Investigative_Action__c</fullName>
    <defaultValue>&quot;Amadeus teams are responding to a critical issue impacting the above identified service. Our first priority is to restore the service as soon as possible. We will provide you with additional details and keep you updated as more information becomes available.&quot;</defaultValue>
    <description>NICC-028950 - Added for the Trust Incident Notifications project.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Replace this text and provide information regarding the investigation and/or recovery actions.</inlineHelpText>
    <label>Amadeus Investigative Action</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>