force-app/main/default/objects/NI_Trust_Outage__c/fields/Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Number__c</fullName>
    <description>NICC-028950 - Added for the Trust Incident Notifications project.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The support case associated with this incident.</inlineHelpText>
    <label>Case Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>