force-app/main/default/objects/NI_Trust_Outage__c/fields/ChangeGear_RFC__c.field-meta.xml
<CustomField>
    <fullName>ChangeGear_RFC__c</fullName>
    <description>Hosted RFCs that reside in ChangeGear</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Hosted RFCs that reside in ChangeGear</inlineHelpText>
    <label>ChangeGear RFC</label>
    <type>Url</type>
</CustomField>