force-app/main/default/objects/NI_Trust_Outage__c/fields/Customer_Impact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Impact__c</fullName>
    <defaultValue>&quot;Customers may be experiencing &lt;insert symptoms here&gt;. This prevents customers from &lt;insert text here&gt;; or &lt;insert text here&gt; functionality is currently not available for certain customers. This prevents customers from &lt;insert text here&gt;.&quot;</defaultValue>
    <description>NICC-028950 - Added for the Trust Incident Notifications project.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Replace this text by inserting the impact of this issue as understood from the IR.</inlineHelpText>
    <label>Customer Impact</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>