force-app/main/default/objects/NI_Trust_Outage__c/fields/Editable_Duration__c.field-meta.xml
<CustomField>
    <fullName>Editable_Duration__c</fullName>
    <description>NICC-019102</description>
    <inlineHelpText>Incident End Time - Incident Start Time (in minutes). This field is populated by a workflow rule only if it is blank, the End Date and End Time GMT fields have been populated, and the status is not Resolved.</inlineHelpText>
    <label>Total Duration (Editable)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>