force-app/main/default/objects/NI_Trust_Outage__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>NICC-028950 - Added for the Trust Incident Notifications project.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Incident end time in MM/DD/YYYY format.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>