force-app/main/default/objects/NI_Trust_Outage__c/fields/End_Time_GMT__c.field-meta.xml
<CustomField>
    <fullName>End_Time_GMT__c</fullName>
    <defaultValue>&quot;HH:MM&quot;</defaultValue>
    <description>NICC-028950 - Added for the Trust Incident Notifications project.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Incidend end time in 24-hour GMT format. This field is static and is not subject to Salesforce time zone conversion.</inlineHelpText>
    <label>End Time GMT</label>
    <length>5</length>
    <type>Text</type>
</CustomField>