force-app/main/default/objects/NI_Trust_Outage__c/fields/Estimated_Duration__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Duration__c</fullName>
    <description>NICC-028950 - Added for the Trust Incident Notifications project.</description>
    <inlineHelpText>The estimated duration of the incident - this only applies to Planned outages/incidents.</inlineHelpText>
    <label>Estimated Duration in Minutes</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>