force-app/main/default/objects/NI_Trust_Outage__c/fields/External_Platform_Name__c.field-meta.xml
<CustomField>
    <fullName>External_Platform_Name__c</fullName>
    <description>NICC-028950 Mapped from the AH Trust parent record.</description>
    <formula>NI_Trust__r.Platform_Name_External__c</formula>
    <inlineHelpText>Mapped from the AH Trust parent record.</inlineHelpText>
    <label>External Platform Name</label>
    <type>Text</type>
</CustomField>