force-app/main/default/objects/NI_Trust_Outage__c/fields/External_Platform_Name_HIDDEN__c.field-meta.xml
<CustomField>
    <fullName>External_Platform_Name_HIDDEN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>External Platform Name HIDDEN</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>