force-app/main/default/objects/NI_Trust_Outage__c/fields/HotSOS_Application__c.field-meta.xml
<CustomField>
    <fullName>HotSOS_Application__c</fullName>
    <description>NICC-028950 - Added for the Trust Incident Notifications project.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Used to indicate the HotSOS application when the instance/data center is used as the Trust Platform Name. This field can be left blank for other products/platforms.</inlineHelpText>
    <label>HotSOS Application</label>
    <length>255</length>
    <type>Text</type>
</CustomField>