force-app/main/default/objects/NI_Trust_Outage__c/fields/Incident_Description__c.field-meta.xml
<CustomField>
    <fullName>Incident_Description__c</fullName>
    <defaultValue>&quot;Some customers have reported &lt;insert issue here&gt;; or  Some customers may be experiencing &lt;insert issue here&gt;.&quot;</defaultValue>
    <description>NICC-028950 - Added for the Trust Incident Notifications project.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Replace this text by inserting a description of the issue as reported by the customer(s).</inlineHelpText>
    <label>Incident Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>