force-app/main/default/objects/NI_Trust_Outage__c/fields/Incident_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Incident_End_Date_Time__c</fullName>
    <description>NICC-028950 - Added for the Trust Incident Notifications project.</description>
    <formula>IF(ISBLANK(End_Date__c),
&apos;&apos;,
Text(MONTH(End_Date__c)) &amp;&quot;/&quot;&amp; Text(DAY(End_Date__c)) &amp;&quot;/&quot;&amp; Text(YEAR(End_Date__c)) &amp;&quot; &quot;&amp; if (ISBLANK(End_Time_GMT__c), &apos;00:00&apos;, IF(CONTAINS(End_Time_GMT__c, &apos;:&apos;), End_Time_GMT__c, End_Time_GMT__c &amp;&quot;:00&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field that combines the End Date and End Time GMT fields for display in email notifications and the Trust website.</inlineHelpText>
    <label>Incident End Date/Time</label>
    <type>Text</type>
</CustomField>