force-app/main/default/objects/NI_Trust_Outage__c/fields/Incident_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Incident_Start_Date_Time__c</fullName>
    <description>NICC-028950 - Added for the Trust Incident Notifications project.</description>
    <formula>IF(ISBLANK(Start_Date__c),
&apos;&apos;,
Text(MONTH(Start_Date__c)) &amp;&quot;/&quot;&amp; Text(DAY(Start_Date__c)) &amp;&quot;/&quot;&amp; Text(YEAR(Start_Date__c)) &amp;&quot; &quot;&amp; if (ISBLANK(Start_Time_GMT__c), &apos;00:00&apos;, IF(CONTAINS(Start_Time_GMT__c, &apos;:&apos;), Start_Time_GMT__c, Start_Time_GMT__c &amp;&quot;:00&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field that combines the Start Date and Start Time GMT fields for display in email notifications and the Trust website.</inlineHelpText>
    <label>Incident Start Date/Time</label>
    <type>Text</type>
</CustomField>