force-app/main/default/objects/NI_Trust_Outage__c/fields/Internal_Platform_Name__c.field-meta.xml
<CustomField>
    <fullName>Internal_Platform_Name__c</fullName>
    <formula>NI_Trust__r.Platform_Name_Internal__c</formula>
    <label>Internal Platform Name</label>
    <type>Text</type>
</CustomField>