force-app/main/default/objects/NI_Trust_Outage__c/fields/Internal_Platform_Name_LIST__c.field-meta.xml
<CustomField>
    <fullName>Internal_Platform_Name_LIST__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Internal Platform Name</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>