force-app/main/default/objects/NI_Trust_Outage__c/fields/Make_Public__c.field-meta.xml
<CustomField>
    <fullName>Make_Public__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NICC-007128: Toggle record to be displayed on the customer facing NI Trust page.</description>
    <inlineHelpText>When checked will display exception on customer facing NI Trust page.</inlineHelpText>
    <label>Make Public</label>
    <type>Checkbox</type>
</CustomField>