force-app/main/default/objects/NI_Trust_Outage__c/fields/NI_Trust__c.field-meta.xml
<CustomField>
    <fullName>NI_Trust__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NICC-041989 - Changed from Master-detail to regular lookup field</description>
    <label>AH Trust</label>
    <referenceTo>NI_Trust__c</referenceTo>
    <relationshipLabel>AH Trust Incidents</relationshipLabel>
    <relationshipName>NI_Trust_Outages</relationshipName>
    <type>Lookup</type>
</CustomField>