force-app/main/default/objects/NI_Trust_Outage__c/fields/Notification_Heading__c.field-meta.xml
<CustomField>
    <fullName>Notification_Heading__c</fullName>
    <defaultValue>&quot;Please be informed about the following Amadeus Hospitality incident.&quot;</defaultValue>
    <description>NICC-028950 - Added for the Trust Incident Notifications project.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Text that displays a the top of an incident notification email.</inlineHelpText>
    <label>Notification Heading</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>