force-app/main/default/objects/NI_Trust_Outage__c/fields/Outage_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Outage_Start_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Start Date/Time</label>
    <type>DateTime</type>
</CustomField>