force-app/main/default/objects/NI_Trust_Outage__c/fields/Problem_Mgt_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Problem_Mgt_Follow_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Problem Mgt Follow Up</label>
    <type>Checkbox</type>
</CustomField>