force-app/main/default/objects/NI_Trust_Outage__c/fields/Public_Details__c.field-meta.xml
<CustomField>
    <fullName>Public_Details__c</fullName>
    <description>NICC-007128: Public customer facing description or explanation of outage.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Public customer facing description or explanation of outage.</inlineHelpText>
    <label>Public Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>