force-app/main/default/objects/NI_Trust_Outage__c/fields/Root_Cause_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause_Analysis__c</fullName>
    <description>NICC-028950 - Added for the Trust Incident Notifications project.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The root cause of the incident - this field will not be shown on notifications if blank.</inlineHelpText>
    <label>Root Cause Analysis</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>