force-app/main/default/objects/NI_Trust_Outage__c/fields/Send_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Send_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NICC-028950 - Added for the Trust Incident Notifications project.</description>
    <inlineHelpText>Indicates that automated incident updates are turned on for this incident. Updated by a workflow rule.</inlineHelpText>
    <label>Send Notifications</label>
    <type>Checkbox</type>
</CustomField>