force-app/main/default/objects/NI_Trust_Outage__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <description>NICC-028950 - Added for the Trust Incident Notifications project.</description>
    <inlineHelpText>The severity of the incident - automated incident notifications can only be sent for Severity 1 and 2 incidents.</inlineHelpText>
    <label>Severity</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Critical</fullName>
            </value>
            <value>
                <fullName>2 - Urgent</fullName>
            </value>
            <value>
                <fullName>3 - Medium</fullName>
            </value>
            <value>
                <fullName>4 - Minor</fullName>
            </value>
            <value>
                <fullName>2 - Serious</fullName>
                <isActive>false</isActive>
                <label>2 - Serious</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>