force-app/main/default/objects/NI_Trust_Outage__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Created for NICC-028116 and used by AH Trust Outage notifications.</description>
    <inlineHelpText>Status of the incident - this controls the automated email notifications.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Open Stage 1</fullName>
            </value>
            <value>
                <fullName>Open Stage 2</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>