force-app/main/default/objects/NI_Trust_Outage__c/fields/Time_to_Detection__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Detection__c</fullName>
    <formula>( Detected_Date_Time__c -  Outage_Start_Date_Time__c ) * 24 * 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time to Detection</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>