force-app/main/default/objects/NI_Trust_Outage__c/fields/Total_Duration__c.field-meta.xml
<CustomField>
    <fullName>Total_Duration__c</fullName>
    <description>Formula was updated for NICC-028950.</description>
    <formula>VALUE(IF(OR(ISBLANK(End_Date__c), ISBLANK(End_Time_GMT__c), End_Time_GMT__c = &quot;HH:MM&quot;), &quot;&quot;, TEXT(( DATETIMEVALUE(TEXT(YEAR(End_Date__c))+&quot;-&quot; +TEXT(MONTH(End_Date__c))+&quot;-&quot;+TEXT(DAY(End_Date__c))+&quot; &quot;+End_Time_GMT__c+&quot;:00&quot;) - DATETIMEVALUE(TEXT(YEAR(Start_Date__c))+&quot;-&quot; +TEXT(MONTH(Start_Date__c))+&quot;-&quot;+TEXT(DAY(Start_Date__c))+&quot; &quot;+Start_Time_GMT__c+&quot;:00&quot;) ) * 24 * 60)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Incident End Time - Incident Start Time (in minutes)</inlineHelpText>
    <label>Total Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>