force-app/main/default/objects/NI_Trust_Outage__c/fields/Workaround_Information__c.field-meta.xml
<CustomField>
    <fullName>Workaround_Information__c</fullName>
    <description>NICC-028950 - Added for the Trust Incident Notifications project.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Workaround for the incident if available - this field will not be shown on notifications if blank.</inlineHelpText>
    <label>Workaround Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>