force-app/main/default/objects/NI_Trust_Outage__c/recordTypes/Planned.recordType-meta.xml
<RecordType>
    <fullName>Planned</fullName>
    <active>true</active>
    <label>Planned</label>
</RecordType>