force-app/main/default/objects/NI_Trust_Outage__c/recordTypes/Unplanned.recordType-meta.xml
<RecordType>
    <fullName>Unplanned</fullName>
    <active>true</active>
    <label>Unplanned</label>
</RecordType>