force-app/main/default/objects/NI_Trust_Outage__c/listViews/All_Unplanned.listView-meta.xml
<ListView>
    <fullName>All_Unplanned</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>External_Platform_Name__c</columns>
    <columns>Make_Public__c</columns>
    <columns>Outage_Start_Date_Time__c</columns>
    <columns>Outage_End_Date_Time__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NI_Trust_Outage__c.Unplanned</value>
    </filters>
    <label>All Unplanned</label>
    <sharedTo>
        <group>Administrators</group>
        <group>Trust_Admin</group>
    </sharedTo>
</ListView>